# wx

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  ONBOARDING.md  README.md  SESSION.md  ast.ts  base.wx  codegen.test.ts  codegen.ts  compile-and-optimize.sh  deno.json  env.wx  fibo.wat  grammar.ebnf  grammar.peg  hello.wat  history.md  lexer.test.ts  lexer.ts  main.ts  main.wx  parser.test.ts  parser.ts  plot.md  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  std.wx  temp.wx  test.wx  typeset.md
cli/: bin.js  (+2 more)
crates/wx-cli/: Cargo.toml
crates/wx-cli/src/: main.rs
crates/wx-compiler/: Cargo.toml  TODO.md  std.wx
crates/wx-compiler-cli/: Cargo.toml
crates/wx-compiler-cli/src/: main.rs
crates/wx-compiler-new/: Cargo.toml
crates/wx-compiler-new/src/: ast.rs  codegen.rs  diagnostics.rs  fmt.rs  lib.rs  mir.rs  tir.rs
crates/wx-compiler-new/src/snapshots/: wx_compiler_new__ast__tests__parse_simple_addition.snap.new  wx_compiler_new__tir__tests__parse_simple_addition.snap.new
crates/wx-compiler-wasm/: Cargo.toml  LICENSE
crates/wx-compiler-wasm/src/: lib.rs
crates/wx-compiler/src/: ast.rs  codegen.rs  files.rs  fmt.rs  lib.rs  mir.rs  span.rs  testing.rs  tests.rs  tir.rs  vfs.rs
crates/wx-compiler/src/ast/: diagnostics.rs  lexer.rs  mod.rs  parser.rs  tests.rs
crates/wx-compiler/src/ast/snapshots/: wx_compiler__ast__tests__call_field_namespace.snap  wx_compiler__ast__tests__call_field_namespace.snap.new  wx_compiler__ast__tests__cast_precedence.snap  wx_compiler__ast__tests__chained_comparison_error.snap  wx_compiler__ast__tests__chained_member_access.snap  wx_compiler__ast__tests__chained_member_access.snap.new  wx_compiler__ast__tests__const.snap  wx_compiler__ast__tests__enum.snap  wx_compiler__ast__tests__export_alias.snap  wx_compiler__ast__tests__export_alias.snap.new  wx_compiler__ast__tests__fn_pointer_param.snap  wx_compiler__ast__tests__fn_pointer_param.snap.new  wx_compiler__ast__tests__function.snap  wx_compiler__ast__tests__function_mut_param.snap  wx_compiler__ast__tests__function_mut_param.snap.new  wx_compiler__ast__tests__generic_function_multiple_params_and_bounds.snap  wx_compiler__ast__tests__generic_function_unconstrained.snap  wx_compiler__ast__tests__generic_function_with_bound.snap  wx_compiler__ast__tests__generic_signatures.snap  (+53 more)
crates/wx-compiler/src/codegen/: mod.rs  tests.rs
crates/wx-compiler/src/fmt/: mod.rs  tests.rs
crates/wx-compiler/src/hir/: builder.rs  diagnostics.rs  global.rs  local.rs  mod.rs  tests.rs
crates/wx-compiler/src/mir/: builder.rs  dfg.rs  mod.rs  optimizer.rs  tests.rs
crates/wx-compiler/src/opt/: builder.rs  liveness.rs  mod.rs  scheduler.rs  tests.rs
crates/wx-compiler/src/snapshots/: wx_compiler__ast__tests__parse_export_with_alias.snap  wx_compiler__ast__tests__parse_export_with_alias.snap.new  wx_compiler__ast__tests__parse_impl_block.snap  wx_compiler__ast__tests__parse_impl_block.snap.new  wx_compiler__ast__tests__parse_import_with_alias.snap  wx_compiler__ast__tests__parse_import_with_alias.snap.new  wx_compiler__ast__tests__struct_init_basic.snap  wx_compiler__ast__tests__struct_init_empty.snap  wx_compiler__ast__tests__struct_init_in_if_condition.snap  wx_compiler__ast__tests__struct_init_label_not_confused.snap  wx_compiler__ast__tests__struct_init_mixed_fields.snap  wx_compiler__ast__tests__struct_init_shorthand.snap  wx_compiler__ast__tests__struct_init_trailing_comma.snap  wx_compiler__codegen__tests__imports.snap  wx_compiler__codegen__tests__imports.snap.new  wx_compiler__codegen__tests__lerp.snap.new  wx_compiler__codegen__tests__parse_simple_addition.snap.new  wx_compiler__mir__tests__char_literal_field_access.snap.new  wx_compiler__mir__tests__char_lowered_to_u32.snap  wx_compiler__mir__tests__char_lowered_to_u32.snap.new  wx_compiler__mir__tests__global_struct_type.snap  wx_compiler__mir__tests__global_struct_type.snap.new  wx_compiler__mir__tests__inline_method_is_substituted.snap  wx_compiler__mir__tests__parse_simple_addition.snap  wx_compiler__mir__tests__parse_simple_addition.snap.new  wx_compiler__mir__tests__size_associated_const.snap  wx_compiler__mir__tests__size_associated_const.snap.new  wx_compiler__mir__tests__string_field_access_lowered_to_local_tuple_get.snap  wx_compiler__mir__tests__string_field_access_lowered_to_local_tuple_get.snap.new  wx_compiler__mir__tests__string_literal_lowered_to_tuple.snap  wx_compiler__mir__tests__struct_field_access_lowered_to_local_tuple_get.snap  wx_compiler__mir__tests__struct_field_access_lowered_to_local_tuple_get.snap.new  wx_compiler__mir__tests__struct_init_lowered_to_struct_create.snap  wx_compiler__mir__tests__struct_init_lowered_to_struct_create.snap.new  wx_compiler__mir__tests__struct_method_call.snap  wx_compiler__mir__tests__struct_method_call.snap.new  wx_compiler__tests__factorial.snap.wasm  wx_compiler__tests__factorial.wat.snap  wx_compiler__tests__factorial_ast.snap  wx_compiler__tests__factorial_hir.snap  (+33 more)
crates/wx-compiler/src/tir/: builder.rs  mod.rs  tests.rs
crates/wx-compiler/src/vfs/: mod.rs  tests.rs
crates/wx-compiler/src/wasm/: builder.rs  encoder.rs  mod.rs  scheduler.rs  wat.rs
crates/wx-compiler/std/: lib.wx
crates/wx-fmt/: Cargo.toml
crates/wx-fmt/src/: backup.rs  lib.rs  tests.rs
crates/wx-lsp/: Cargo.toml
crates/wx-lsp-next/: Cargo.toml
crates/wx-lsp-next/src/: completion.rs  main.rs  symbol_index.rs  tests.rs
crates/wx-lsp-wasm/: Cargo.toml
crates/wx-lsp-wasm/.cargo/: config.toml
crates/wx-lsp-wasm/src/: lib.rs
crates/wx-lsp/src/: completion.rs  lib.rs  main.rs  span_index.rs  symbol_index.rs  task.rs  tests.rs
wx-compiler/: Cargo.toml
wx-compiler-wasm/: Cargo.toml
wx-compiler-wasm/cli/: package.json  wx-compiler
wx-compiler-wasm/src/: lib.rs
wx-compiler/src/: files.rs  lib.rs
wx-compiler/src/ast/: lexer.rs  mod.rs  parser.rs
wx-compiler/src/hir/: builder.rs  diagnostics.rs  global.rs  local.rs  mod.rs
wx-compiler/src/mir/: builder.rs
wx-compiler/src/wasm/: builder.rs  encoder.rs  mod.rs  wat.rs
wx-lsp/: Cargo.toml
wx-lsp/src/: main.rs
(+277 files in other folders)
