[workspace]
resolver = "3"
members = ["crates/*"]
# `wx-lsp-wasm` uses `Rc<RefCell<...>>` and non-`Send` futures (fine for
# wasm32's single-threaded model), so it can only ever type-check when
# actually compiled for `wasm32-unknown-unknown` — not a Cargo-features
# issue, just genuinely invalid on the host target. A plain
# `cargo check`/`build --workspace` (no `--target`) builds every member for
# the host triple, so it's excluded here; build/check it explicitly with
# `--target wasm32-unknown-unknown` (what `wasm-pack` does) instead.
exclude = ["crates/wx-lsp-wasm"]
package.repository = "https://github.com/MellKam/wx"
package.license = "MIT"
package.edition = "2024"
# Found the minimum version with https://github.com/foresterre/cargo-msrv
package.rust-version = "1.85.1"
package.authors = ["Artem Melnyk <melkam464@gmail.com>"]

# Insta benefits from being compiled in release mode
# https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace.dependencies]
codespan-reporting = "0.13.1"
string-interner = "0.20.0"
serde = "1.0"
serde_json = "1.0"
