[package]
name = "wx-compiler-wasm"
description = "WASM bindings for wx-compiler"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
string-interner = "0.19.0"
wx-compiler = { path = "../wx-compiler" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
