[package]
name = "wx-compiler"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]

[dependencies]
codespan-reporting = { version = "0.12.0", features = ["serialization"] }
indoc = "2.0.6"
leb128fmt = "0.1.0"
string-interner = "0.19.0"
serde = "1.0"
