[package]
name = "wx-cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
codespan-reporting = { workspace = true }
string-interner = { workspace = true }
wx-compiler = { path = "../wx-compiler" }
wx-fmt = { path = "../wx-fmt" }


[[bin]]
name = "wx"
path = "src/main.rs"
