[package]
name = "wx-compiler-cli"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.40", features = ["cargo"] }
codespan-reporting = "0.12.0"
string-interner = "0.19.0"
wx-compiler = { path = "../wx-compiler" }

[[bin]]
name = "wx-compiler"
path = "src/main.rs"
