[package]
name = "wx-compiler-wasm"
description = "WASM bindings for wx-compiler"
version = "0.1.0"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/MellKam/wx"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
string-interner = "0.19.0"
serde = { version = "1.0" }
serde-wasm-bindgen = "0.6"
codespan-reporting = { version = "0.12.0", features = ["serialization"] }
wx-compiler = { path = "../wx-compiler" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
