[package]
name = "wx-compiler"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]

[dependencies]
codespan-reporting = { version = "0.12.0", features = ["serialization"] }
indoc = "2.0.6"
leb128fmt = "0.1.0"
string-interner = "0.19.0"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
indoc = "2"
insta = { version = "1.43", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
