[package]
name = "wx-fmt"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
string-interner = "0.20.0"
wx-compiler = { path = "../wx-compiler" }

[dev-dependencies]
indoc = "2"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
