[package]
name = "wx-fmt"
description = "Code formatter for WX language"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
string-interner = { workspace = true }
wx-compiler = { path = "../wx-compiler" }

[dev-dependencies]
indoc = "2"
