[package]
name = "wx-fmt"
description = "Code formatter for WX language"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/MellKam/wx/tree/main/crates/wx-fmt"

[dependencies]
string-interner = { workspace = true }
wx-compiler = { path = "../wx-compiler" }

[dev-dependencies]
indoc = "2"
