[package]
name = "wx-lsp-next"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
tower-lsp-server = "0.23.0"
tokio = { version = "1", features = ["full"] }
wx-compiler = { path = "../wx-compiler" }
codespan-reporting = "0.13.1"
serde = { version = "1", features = ["derive"] }
