[package]
name = "wx-lsp-next"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tower-lsp-server = "0.23.0"
tokio = { version = "1", features = ["full"] }
wx-compiler = { path = "../wx-compiler" }
wx-fmt = { path = "../wx-fmt" }
string-interner = { workspace = true }
codespan-reporting = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
indoc = "2"
