[package]
name = "wx-lsp-wasm"
description = "Wasm bindings for wx-lsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wx-lsp = { path = "../wx-lsp", default-features = false, features = ["wasm"] }
tower-lsp-server = { version = "0.23.0", default-features = false, features = ["runtime-agnostic"] }
tower = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
