[package]
name = "wx-lsp"
version = "0.0.1"
authors = ["Artem Melnyk <melkam464@gmail.com>"]
edition = "2024"
license = "MIT"

[dependencies]
lsp-server = "0.8.0"
lsp-types = { version = "0.97.0", features = ["proposed"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
wx-compiler = { path = "../wx-compiler" }
string-interner = { workspace = true }
codespan-reporting = { workspace = true }
